# diff-epi-inference-handbook

./: .gitignore  AGENTS.md  DIFF_EPI_DEVELOPMENT_PLAN.md  Makefile  README.md  ROADMAP.md  autodiff-basics.html  classical-baselines.html  constraints-dev.txt  differentiability-axis.html  gradient-estimators.html  index.html  likelihood-free-baselines.html  modern-sbi.html  pyproject.toml  references.html  running-example.html  search.json  toy-diff-epi-case-study.html  validation-and-robustness.html  variational-inference.html
.github/workflows/: ci.yml  pages.yml
book/: _quarto-ci.yml  _quarto.yml  autodiff-basics.qmd  classical-baselines.qmd  differentiability-axis.qmd  gradient-estimators.qmd  index.qmd  likelihood-free-baselines.qmd  modern-sbi-end-to-end.qmd  modern-sbi.qmd  references.bib  references.qmd  running-example.qmd  toy-diff-epi-case-study.qmd  validation-and-robustness.qmd  variational-inference.qmd
data/: README.md
docs/: BUILD.md  DATASETS.md  DIFF_EPI_DEVELOPMENT_PLAN.md  PAGES.md  ROADMAP.md  SPEC_TO_REPO_MAP.md  STATUS.md  WORKLOG.md
docs/agent/: CHANGELOG_AGENT.md  DECISIONS.md  KNOWN_ISSUES.md  M3.1_DOD_CHECKLIST.md  NEXT_TASKS.md  PLAN.md  PROJECT_STATE.md  RUNBOOK.md  SCOPE.md  TASKGRAPH.yaml  TASKSTATE.yaml  TRACE.jsonl  TRACE.md
scripts/: check_book_quality.sh  ci.sh  make_synthetic_dataset.py  test.sh
src/diff_epi_inference/: __init__.py  dataset.py  io.py  observation.py  pipeline.py  plotting.py  seir.py  stats.py  synthetic_likelihood.py
src/diff_epi_inference/abc/: __init__.py  rejection.py  smc.py
src/diff_epi_inference/autodiff/: __init__.py  demos.py
src/diff_epi_inference/differentiability/: __init__.py  demos.py
src/diff_epi_inference/examples/: __init__.py  jax_training_loop.py  paired_seir.py  toy_diff_epi_jax.py
src/diff_epi_inference/flows/: __init__.py  conditional_affine.py
src/diff_epi_inference/gradients/: __init__.py  reinforce.py  relaxations.py
src/diff_epi_inference/mcmc/: __init__.py  hmc.py  mh.py  nuts_blackjax.py
src/diff_epi_inference/models/: __init__.py  seir_jax_beta_only.py  seir_numpy_beta_only.py
src/diff_epi_inference/plotting/: __init__.py  chapter.py  diagnostics.py  mcmc.py  timeseries.py
src/diff_epi_inference/vi/: __init__.py  meanfield_gaussian_jax.py
tests/: test_abc_rejection.py  test_autodiff_demos_optional.py  test_bernoulli_concrete.py  test_blackjax_nuts_optional.py  test_blackjax_nuts_seir_calibration_optional.py  test_conditional_affine_flow.py  test_dataset_format.py  test_differentiability_demos.py  test_examples_paired_seir.py  test_gumbel_softmax.py  test_hmc_smoke.py  test_io_roundtrip.py  test_mh_smoke.py  test_modern_sbi_end_to_end_golden.py  test_observation_delay_nbinom.py  test_observation_model.py  test_paired_reporting_pipeline.py  test_plotting_chapter_helpers.py  test_plotting_chapter_story_helpers.py  test_plotting_diagnostics.py  test_plotting_utils.py  test_reinforce.py  test_running_example_smoke.py  test_seir_numpy_beta_only.py  test_seir_smoke.py  test_seir_stochastic_smoke.py  test_smc_abc.py  test_smc_resampling.py  test_synthetic_likelihood_utils.py  test_toy_diff_epi_case_study_optional.py  test_vi_meanfield_seir_beta_only_optional.py
