[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-epi-inference"
version = "0.0.0"
description = "Differentiable epidemiology: neural and simulation-based inference for infectious diseases (handbook companion code)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OJWatson"}]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "matplotlib>=3.8",
  "jupyter>=1.0",
  "pyyaml>=6.0",
]

# Optional: autodiff + NUTS baseline (used in the M2 classical baselines chapter).
nuts = [
  "jax[cpu]>=0.4.28",
  "blackjax>=1.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
