[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-epi-inference"
version = "0.0.0"
description = "Differentiable epidemiology: neural and simulation-based inference for infectious diseases (handbook companion code)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OJWatson"}]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
# Dev tools used in CI + for rendering executable Quarto code blocks.
dev = [
  "pytest>=8",
  "ruff>=0.4",
  "matplotlib>=3.8",
  "arviz>=0.19",
  "jupyter>=1.0",
  "pyyaml>=6.0",
]

# Optional: JAX runtime (CPU wheels).
#
# Kept as an extra so the core package stays lightweight and NumPy-only.
jax = [
  "jax[cpu]>=0.4.28",
]

# Optional: autodiff + NUTS baseline (used in the M2 classical baselines chapter).
#
# This is a small, well-scoped optional path; tests using it are skipped unless the
# extra is installed.
nuts = [
  "jax[cpu]>=0.4.28",
  "blackjax>=1.2.0",
]

# Optional: "modern SBI" stack (JAX + lightweight NN/optimiser/dists building blocks).
#
# This is intended for M4+ chapters (conditional flows, amortised inference). We keep
# it behind an extra so users who only want the classical/ABC content don't have to
# pull in JAX or ML dependencies.
modern-sbi = [
  "jax[cpu]>=0.4.28",
  "equinox>=0.11.0",
  "optax>=0.2.2",
  "distrax>=0.1.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".tools",
  "book/_book",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
